--- a/GETube/Podfile
+++ b/GETube/Podfile
@@ -6,7 +6,7 @@ target 'GETube' do
   # use_frameworks!
 		pod 'GoogleAPIClient/Drive'
 		pod 'GoogleAPIClient/YouTube’
-	       pod "youtube-ios-player-helper", "~> 0.1.4"
+	       pod "youtube-ios-player-helper", "~> 0.1.6”
 	      pod 'NSDate+TimeAgo'
 		pod 'DGActivityIndicatorView'
 	pod 'MMDrawerController', '~> 0.5.7'
